--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Chris Firgens | Junior Software Developer</title>
   </head>
   <body>
+    <div id="landingPhoto">
+      <div id="landingContent">
+          <h1 class="text-center">Hi, I'm Chris Firgens.</h1>
+          <p class="text-center">I am a multi-talented Junior Software Developer. I possess strong working knowledge of object-oriented programming and application development. I have been consistently commended by instructors for my programming abilities, grasp of multiple technologies and attention to detail.</p>
+          <p class="text-center"><a href="#about" class="btn btn-primary">Learn More</a></p>
+      </div>
+    </div>
 
 
   </body>
