added in about me content, footer with links to PDF,Github,LinkedIn

--- a/index.html
+++ b/index.html
@@ -13,9 +13,40 @@
       <div id="landingContent">
           <h1 class="text-center">Hi, I'm Chris Firgens.</h1>
           <p class="text-center">I am a multi-talented Junior Software Developer. I possess strong working knowledge of object-oriented programming and application development. I have been consistently commended by instructors for my programming abilities, grasp of multiple technologies and attention to detail.</p>
-          <p class="text-center"><a href="#about" class="btn btn-primary">Learn More</a></p>
+          <p class="text-center"><a href="#aboutMe" class="btn btn-primary">Learn More</a></p>
       </div>
     </div>
+
+    <div id="aboutMe">
+      <div class="container py-5">
+        <div class="row">
+          <div class="col-md">
+            <h2 class="text-center"><i class="fab fa-js"></i></h2>
+            <h3 class="text-center">Front-End<br />Development</h3>
+            <p class="text-center">Working experience in HTML, CSS and JavaScript. By using the latest frameworks and plug-ins I create complex, interactive layouts.</p>
+          </div>
+          <div class="col-md">
+            <h2 class="text-center"><i class="fas fa-database"></i></h2>
+            <h3 class="text-center">Back-End<br />Development</h3>
+            <p class="text-center">I have a solid understanding of object-oriented programming and I'm passionate about using C#, ASP.NET, SQL and more to create database-driven applications.</p>
+          </div>
+          <div class="col-md">
+            <h2 class="text-center"><i class="fas fa-sliders-h"></i></h2>
+            <h3 class="text-center">User Interface<br />Design</h3>
+            <p class="text-center">A minimalist at heart, I obsess over details and strive to create clean and intuitive user interfaces.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+    <footer class="py-5">
+      <p class="text-center"><a href="cf_Resume.pdf" target="_blank" class="btn btn-primary btn-s"><i class="fas fa-file-pdf"></i> My Resume</a> <a href="https://github.com/cfirgens?tab=repositories" target="_blank" class="btn btn-primary btn-s"><i class="fab fa-github"></i> GitHub</a> <a href="https://www.linkedin.com/in/chris-firgens-aba3a575/" target="_blank" class="btn btn-primary btn-s"><i class="fab fa-linkedin"></i> LinkedIn</a></p>
+      <p class="text-center">&copy; 2019 Christopher Firgens</p>
+    </footer>
 
 
   </body>
