--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900|Montserrat:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Chris Firgens | Junior Software Developer</title>
   </head>
+
   <body>
     <div id="landingPhoto">
       <div id="landingContent">
           <h1 class="text-center">Hi, I'm Chris Firgens.</h1>
-          <p class="text-center">I am a multi-talented Junior Software Developer. I possess strong working knowledge of object-oriented programming and application development. I have been consistently commended by instructors for my programming abilities, grasp of multiple technologies and attention to detail.</p>
+          <p class="text-center">I am a multi-talented Junior Software Developer. I possess strong working knowledge of object-oriented programming and application development. <br> I've sought out opportunities and challenges that I can make an impact on.</p>
+          <p class="text-center">My professional path has taken many twists and turns. From serving in the military, to working with fortune 500 companies, to financial advising. <br> I've never stopped engaging my passion to help others and solve problems.</p>
           <p class="text-center"><a href="#aboutMe" class="btn btn-primary">Learn More</a></p>
       </div>
     </div>
@@ -39,15 +41,100 @@
       </div>
     </div>
 
+    <div id="featuredProjects">
+      <div class="container">
 
+        <div class="row py-5">
+          <div class="col-md align-self-center order-2 order-sm-2 order-md-1 order-lg-1 order-xl-1">
+            <p class="text-center"><img src="images/coming_soon.png" class="img-fluid rounded"></p>
+          </div>
+          <div class="col-md align-self-center">
+            <h3 class="text-center">NovelHovel</h3>
+            <p class="text-center">My capstone project, NovelHovel allows allows users to keep track and add books to their library using ajax, find and create online book clubs and chat and discuss their favorite books!</p>
+            <p class="text-center"><span class="badge badge-info">ASP.NET CORE</span> <span class="badge badge-info">C#</span> <span class="badge badge-info">HTML/CSS</span> <span class="badge badge-info">JavaScript</span> <span class="badge badge-info">jQuery</span></p>
+            <p class="text-center"><button type="button" class="btn btn-primary " disabled><i class="fab fa-youtube"></i>Demo Coming Soon!</> </button> <a href="https://github.com/Cfirgens/NovelHovel" target="_blank" class="btn btn-primary"><i class="fab fa-github"></i> View Code</a></p>
+          </div>
+        </div>
 
+        <div class="row py-5">
+          <div class="col-md">
+            <p class="text-center"><img src="Images/LitesNBites.jpg" class="img-fluid rounded"></p>
+          </div>
+          <div class="col-md align-self-center">
+            <h3 class="text-center">Lites And Bites</h3>
+            <p class="text-center">Collaborating with 2 other developers, we created an app in one week that allows allows users to create a profile filling out their favorite type of bars, restaurants and events. They are then
+                                   recommended events, bars and restaurants in their area, these recommendations are crowd sourced by the local community and other people who have gone.</p>
+            <p class="text-center"><span class="badge badge-info">ASP.NET CORE</span> <span class="badge badge-info">C#</span> <span class="badge badge-info">HTML/CSS</span> <span class="badge badge-info">JavaScript</span> <span class="badge badge-info">jQuery</span></p>
+            <p class="text-center"><button type="button" class="btn btn-primary" disabled><i class="fab fa-youtube"></i> Demo Coming Soon!</button> <a href="https://github.com/EricBMielke/LightsAndBites" target="_blank" class="btn btn-primary"><i class="fab fa-github"></i> View Code</a></p>
+          </div>
+        </div>
 
+        <div class="row py-5">
+          <div class="col-md align-self-center order-2 order-sm-2 order-md-1 order-lg-1 order-xl-1">
+            <p class="text-center"><img src="images/trash_collector.jpg" class="img-fluid rounded"></p>
+          </div>
+          <div class="col-md align-self-center">
+            <h3 class="text-center">Trash Collector</h3>
+            <p class="text-center">Let's disrupt the way your garbage is picked up! This web app allows customers to set their pickup preferences, view account info and pay online. Trash collectors can view their route, mark their pickups and bill their customers. My first ASP.NET project, I completed this in less than a week and received a grade of 117%.</p>
+            <p class="text-center"><span class="badge badge-info">ASP.NET</span> <span class="badge badge-info">C#</span> <span class="badge badge-info">HTML/CSS</span> <span class="badge badge-info">JavaScript</span> <span class="badge badge-info">jQuery</span></p>
+            <p class="text-center"><button type="button" class="btn btn-primary" disabled><i class="fab fa-youtube"></i> Demo Coming Soon!</button> <a href="https://github.com/cfirgens/TrashCollector" target="_blank" class="btn btn-primary"><i class="fab fa-github"></i> View Code</a></p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div id="moreProjects">
+      <div class="container py-5">
+        <div class="row">
+          <div class="col-md">
+            <h1 class="text-center">More Projects</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg py-3">
+            <p class="text-center"><img src="images/humane_society.jpg" class="img-fluid rounded"></p>
+            <h4 class="text-center">Humane Society</h4>
+            <p class="text-center">A C# console application utilizing a local database to manage a virtual humane society.</p>
+            <p class="text-center"><span class="badge badge-info">C#</span> <span class="badge badge-info">SQL</span> <span class="badge badge-info">Collaboration</span></p>
+            <p class="text-center"><a href="https://github.com/cfirgens/Humane-Society" target="_blank" class="btn btn-dark"><i class="fab fa-github"></i> View Code</a></p>
+          </div>
+          <div class="col-lg py-3">
+            <p class="text-center"><img src="images/custom_list.jpg" class="img-fluid rounded"></p>
+            <h4 class="text-center">Custom List Class</h4>
+            <p class="text-center">Using test-driven development, this project re-creates and re-imagines the built-in C# list class.</p>
+            <p class="text-center"><span class="badge badge-info">C#</span></p>
+            <p class="text-center"><a href="https://github.com/cfirgens/Custom_List" target="_blank" class="btn btn-dark"><i class="fab fa-github"></i> View Code</a></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg py-3">
+            <p class="text-center"><img src="images/lemonade_stand.jpg" class="img-fluid rounded"></p>
+            <h4 class="text-center">Lemonade Stand</h4>
+            <p class="text-center">A take on the classic business simulation game. Built using C# OOP and runs in the console.</p>
+            <p class="text-center"><span class="badge badge-info">C#</span></p>
+            <p class="text-center"><a href="https://github.com/cfirgens/Lemonade-Stand" target="_blank" class="btn btn-dark"><i class="fab fa-github"></i> View Code</a></p>
+          </div>
+          <div class="col-lg py-3">
+            <p class="text-center"><img src="images/rpsls.jpg" class="img-fluid rounded"></p>
+            <h4 class="text-center">RPSLS</h4>
+            <p class="text-center">Rock, Paper, Scissors, Lizard, Spock &mdash; written in C# using an elegant algorithm.</p>
+            <p class="text-center"><span class="badge badge-info">C#</span></p>
+            <p class="text-center"><a href="https://github.com/cfirgens/RPSLS-Game" target="_blank" class="btn btn-dark"><i class="fab fa-github"></i> View Code</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <footer class="py-5">
       <p class="text-center"><a href="cf_Resume.pdf" target="_blank" class="btn btn-primary btn-s"><i class="fas fa-file-pdf"></i> My Resume</a> <a href="https://github.com/cfirgens?tab=repositories" target="_blank" class="btn btn-primary btn-s"><i class="fab fa-github"></i> GitHub</a> <a href="https://www.linkedin.com/in/chris-firgens-aba3a575/" target="_blank" class="btn btn-primary btn-s"><i class="fab fa-linkedin"></i> LinkedIn</a></p>
       <p class="text-center">&copy; 2019 Christopher Firgens</p>
     </footer>
 
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="js/jquery.localScroll.min.js"></script>
+    <script src="js/jquery.scrollTo.min.js"></script>
 
   </body>
 </html>
