github pages fixes

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <div class="row py-5">
           <div class="col-md">
-            <p class="text-center"><img src="Images/LitesNBites.jpg" class="img-fluid rounded"></p>
+            <p class="text-center"><img src="images/LitesNBites.jpg" class="img-fluid rounded"></p>
           </div>
           <div class="col-md align-self-center">
             <h3 class="text-center">Lites And Bites</h3>
