--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
         </div>
         <div class="row">
           <div class="col-lg py-3">
-            <p class="text-center"><img src="Images/humane_society.jpg" class="img-fluid rounded"></p>
+            <p class="text-center"><img src="images/humane_society.jpg" class="img-fluid rounded"></p>
             <h4 class="text-center">Humane Society</h4>
             <p class="text-center">A C# console application utilizing a local database to manage a virtual humane society.</p>
             <p class="text-center"><span class="badge badge-info">C#</span> <span class="badge badge-info">SQL</span> <span class="badge badge-info">Collaboration</span></p>
             <p class="text-center"><a href="https://github.com/cfirgens/Humane-Society" target="_blank" class="btn btn-dark"><i class="fab fa-github"></i> View Code</a></p>
           </div>
           <div class="col-lg py-3">
-            <p class="text-center"><img src="Images/custom_list.jpg" class="img-fluid rounded"></p>
+            <p class="text-center"><img src="images/custom_list.jpg" class="img-fluid rounded"></p>
             <h4 class="text-center">Custom List Class</h4>
             <p class="text-center">Using test-driven development, this project re-creates and re-imagines the built-in C# list class.</p>
             <p class="text-center"><span class="badge badge-info">C#</span></p>
