changed all img extensions to capitol Img

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="row py-5">
           <div class="col-md align-self-center order-2 order-sm-2 order-md-1 order-lg-1 order-xl-1">
-            <p class="text-center"><img src="images/coming_soon.png" class="img-fluid rounded"></p>
+            <p class="text-center"><img src="Images/coming_soon.png" class="img-fluid rounded"></p>
           </div>
           <div class="col-md align-self-center">
             <h3 class="text-center">NovelHovel</h3>
@@ -58,7 +58,7 @@
 
         <div class="row py-5">
           <div class="col-md">
-            <p class="text-center"><img src="images/LitesNBites.jpg" class="img-fluid rounded"></p>
+            <p class="text-center"><img src="Images/LitesNBites.jpg" class="img-fluid rounded"></p>
           </div>
           <div class="col-md align-self-center">
             <h3 class="text-center">Lites And Bites</h3>
@@ -71,7 +71,7 @@
 
         <div class="row py-5">
           <div class="col-md align-self-center order-2 order-sm-2 order-md-1 order-lg-1 order-xl-1">
-            <p class="text-center"><img src="images/trash_collector.jpg" class="img-fluid rounded"></p>
+            <p class="text-center"><img src="Images/trash_collector.jpg" class="img-fluid rounded"></p>
           </div>
           <div class="col-md align-self-center">
             <h3 class="text-center">Trash Collector</h3>
@@ -93,14 +93,14 @@
         </div>
         <div class="row">
           <div class="col-lg py-3">
-            <p class="text-center"><img src="images/humane_society.jpg" class="img-fluid rounded"></p>
+            <p class="text-center"><img src="Images/humane_society.jpg" class="img-fluid rounded"></p>
             <h4 class="text-center">Humane Society</h4>
             <p class="text-center">A C# console application utilizing a local database to manage a virtual humane society.</p>
             <p class="text-center"><span class="badge badge-info">C#</span> <span class="badge badge-info">SQL</span> <span class="badge badge-info">Collaboration</span></p>
             <p class="text-center"><a href="https://github.com/cfirgens/Humane-Society" target="_blank" class="btn btn-dark"><i class="fab fa-github"></i> View Code</a></p>
           </div>
           <div class="col-lg py-3">
-            <p class="text-center"><img src="images/custom_list.jpg" class="img-fluid rounded"></p>
+            <p class="text-center"><img src="Images/custom_list.jpg" class="img-fluid rounded"></p>
             <h4 class="text-center">Custom List Class</h4>
             <p class="text-center">Using test-driven development, this project re-creates and re-imagines the built-in C# list class.</p>
             <p class="text-center"><span class="badge badge-info">C#</span></p>
@@ -109,14 +109,14 @@
         </div>
         <div class="row">
           <div class="col-lg py-3">
-            <p class="text-center"><img src="images/lemonade_stand.jpg" class="img-fluid rounded"></p>
+            <p class="text-center"><img src="Images/lemonade_stand.jpg" class="img-fluid rounded"></p>
             <h4 class="text-center">Lemonade Stand</h4>
             <p class="text-center">A take on the classic business simulation game. Built using C# OOP and runs in the console.</p>
             <p class="text-center"><span class="badge badge-info">C#</span></p>
             <p class="text-center"><a href="https://github.com/cfirgens/Lemonade-Stand" target="_blank" class="btn btn-dark"><i class="fab fa-github"></i> View Code</a></p>
           </div>
           <div class="col-lg py-3">
-            <p class="text-center"><img src="images/rpsls.jpg" class="img-fluid rounded"></p>
+            <p class="text-center"><img src="Images/rpsls.jpg" class="img-fluid rounded"></p>
             <h4 class="text-center">RPSLS</h4>
             <p class="text-center">Rock, Paper, Scissors, Lizard, Spock &mdash; written in C# using an elegant algorithm.</p>
             <p class="text-center"><span class="badge badge-info">C#</span></p>
