fixed syntax on resume link

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
 
     <footer class="py-5">
-      <p class="text-center"><a href="cf_Resume.pdf" target="_blank" class="btn btn-primary btn-s"><i class="fas fa-file-pdf"></i> My Resume</a> <a href="https://github.com/cfirgens?tab=repositories" target="_blank" class="btn btn-primary btn-s"><i class="fab fa-github"></i> GitHub</a> <a href="https://www.linkedin.com/in/chris-firgens-aba3a575/" target="_blank" class="btn btn-primary btn-s"><i class="fab fa-linkedin"></i> LinkedIn</a></p>
+      <p class="text-center"><a href="CF_Resume.pdf" target="_blank" class="btn btn-primary btn-s"><i class="fas fa-file-pdf"></i> My Resume</a> <a href="https://github.com/cfirgens?tab=repositories" target="_blank" class="btn btn-primary btn-s"><i class="fab fa-github"></i> GitHub</a> <a href="https://www.linkedin.com/in/chris-firgens-aba3a575/" target="_blank" class="btn btn-primary btn-s"><i class="fab fa-linkedin"></i> LinkedIn</a></p>
       <p class="text-center">&copy; 2019 Christopher Firgens</p>
     </footer>
 
